--- a/Freedom-line-freight-express/package.json
+++ b/Freedom-line-freight-express/package.json
@@ -14,7 +14,8 @@
     "react-router": "^7.1.1",
     "lucide-react": "^0.469.0",
     "vite": "^6.0.11",
-    "@vitejs/plugin-react": "^4.3.4"
+    "@vitejs/plugin-react": "^4.3.4",
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
